infra/k8s/cm-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm
  template:
    metadata:
      labels:
        app: cm
    spec:
      containers:
        - name: cm
          image: questify/cm
---
apiVersion: v1
kind: Service
metadata:
  name: cm-srv
spec:
  selector:
    app: cm
  ports:
    - name: cm
      protocol: TCP
      port: 3000
      targetPort: 3000
