infra/k8s/course-mgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-mgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-mgmt
  template:
    metadata:
      labels:
        app: course-mgmt
    spec:
      containers:
        - name: course-mgmt
          image: questify/course-mgmt
---
apiVersion: v1
kind: Service
metadata:
  name: course-mgmt-srv
spec:
  selector:
    app: course-mgmt
  ports:
    - name: course-mgmt
      protocol: TCP
      port: 3000
      targetPort: 3000
