infra/k8s/course-mgmt-ps-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-mgmt-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-mgmt-postgres
  template:
    metadata:
      labels:
        app: course-mgmt-postgres
    spec:
      containers:
        - name: course-mgmt-postgres
          image: 'postgres:17'
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/course-mgmt-postgresql/data
              name: course-mgmt-postgresdata
      volumes:
        - name: course-mgmt-postgresdata
          persistentVolumeClaim:
            claimName: course-mgmt-postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: course-mgmt-postgres-srv
spec:
  selector:
    app: course-mgmt-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
