infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: questify.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/course-mgmt/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-mgmt-srv
                port:
                  number: 3000
          - path: /api/course-learning/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-learning-srv
                port:
                  number: 3000
          - path: /api/code-problem/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: code-problem-srv
                port:
                  number: 3000
          - path: /api/admin/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
#
